@@ -156,13 +156,25 @@ class soap_server extends nusoap_base {
 					$this->xml_encoding = 'us-ascii';
 				}
 			}
-			$this->debug('got encoding: '.$this->xml_encoding);
-		} elseif(is_array($_SERVER)){
+		} elseif(isset($_SERVER) && is_array($_SERVER)){
 			$this->headers['User-Agent'] = $_SERVER['HTTP_USER_AGENT'];
-			$this->SOAPAction = isset($_SERVER['SOAPAction']) ? $_SERVER['SOAPAction'] : '';
+			$this->SOAPAction = isset($_SERVER['SOAPAction']) ? str_replace('"', '', $_SERVER['SOAPAction']) : '';
+			// get the character encoding of the incoming request
+			if (isset($_SERVER['CONTENT_TYPE'])) {
+				if (strpos($_SERVER['CONTENT_TYPE'], '=')) {
+					$enc = substr(strstr($_SERVER['CONTENT_TYPE'], '='), 1);
+					$enc = str_replace('"','',$enc);
+					$enc = str_replace('\\','',$enc);
+					if (eregi('^(ISO-8859-1|US-ASCII|UTF-8)$', $enc)) {
+						$this->xml_encoding = $enc;
+					} else {
+						$this->xml_encoding = 'us-ascii';
+					}
+				}
+			}
 		} elseif (is_array($HTTP_SERVER_VARS)) {
 			$this->headers['User-Agent'] = $HTTP_SERVER_VARS['HTTP_USER_AGENT'];
-			$this->SOAPAction = isset($HTTP_SERVER_VARS['SOAPAction']) ? $HTTP_SERVER_VARS['SOAPAction'] : '';
+			$this->SOAPAction = isset($HTTP_SERVER_VARS['SOAPAction']) ? str_replace('"', '', $HTTP_SERVER_VARS['SOAPAction']) : '';
 			// get the character encoding of the incoming request
 			if (isset($HTTP_SERVER_VARS['CONTENT_TYPE'])) {
 				if (strpos($HTTP_SERVER_VARS['CONTENT_TYPE'], '=')) {
